FunxParser.py
# Generated from Funx.g by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FunxParser ( Parser ):

    grammarFileName = "Funx.g"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "';'", "'if'", 
                     "'else'", "'while'", "'for'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'&&'", "'||'", "'|&'", "'!'", 
                     "'!='", "'='", "'>='", "'<='", "'>'", "'<'", "'+'", 
                     "'*'", "'-'", "'/'", "'**'", "'%'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IF", "ELSE", "WHILE", "FOR", 
                      "FLOAT", "INT", "TXTFUN", "TXT", "AND", "OR", "XOR", 
                      "NOT", "DIF", "EQ", "MAJEQ", "MENEQ", "MAJ", "MEN", 
                      "MES", "MULT", "REST", "DIV", "POW", "MOD", "ASSIG", 
                      "COMMENT", "WS" ]

    RULE_root = 0
    RULE_codi = 1
    RULE_instr = 2
    RULE_condicional = 3
    RULE_comparacio = 4
    RULE_bucle = 5
    RULE_assignacio = 6
    RULE_expr = 7
    RULE_definicioFuncio = 8
    RULE_cjtParams = 9
    RULE_cjtExpr = 10

    ruleNames =  [ "root", "codi", "instr", "condicional", "comparacio", 
                   "bucle", "assignacio", "expr", "definicioFuncio", "cjtParams", 
                   "cjtExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    IF=6
    ELSE=7
    WHILE=8
    FOR=9
    FLOAT=10
    INT=11
    TXTFUN=12
    TXT=13
    AND=14
    OR=15
    XOR=16
    NOT=17
    DIF=18
    EQ=19
    MAJEQ=20
    MENEQ=21
    MAJ=22
    MEN=23
    MES=24
    MULT=25
    REST=26
    DIV=27
    POW=28
    MOD=29
    ASSIG=30
    COMMENT=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def codi(self):
            return self.getTypedRuleContext(FunxParser.CodiContext,0)


        def EOF(self):
            return self.getToken(FunxParser.EOF, 0)

        def getRuleIndex(self):
            return FunxParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = FunxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.codi()
            self.state = 23
            self.match(FunxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definicioFuncio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.DefinicioFuncioContext)
            else:
                return self.getTypedRuleContext(FunxParser.DefinicioFuncioContext,i)


        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_codi

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCodi" ):
                return visitor.visitCodi(self)
            else:
                return visitor.visitChildren(self)




    def codi(self):

        localctx = FunxParser.CodiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_codi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 25
                    self.definicioFuncio() 
                self.state = 30
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 31
                self.expr(0)

            elif la_ == 2:
                self.state = 32
                self.comparacio(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignacio(self):
            return self.getTypedRuleContext(FunxParser.AssignacioContext,0)


        def condicional(self):
            return self.getTypedRuleContext(FunxParser.CondicionalContext,0)


        def bucle(self):
            return self.getTypedRuleContext(FunxParser.BucleContext,0)


        def definicioFuncio(self):
            return self.getTypedRuleContext(FunxParser.DefinicioFuncioContext,0)


        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)


        def getRuleIndex(self):
            return FunxParser.RULE_instr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstr" ):
                return visitor.visitInstr(self)
            else:
                return visitor.visitChildren(self)




    def instr(self):

        localctx = FunxParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instr)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.assignacio()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.condicional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.bucle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 38
                self.definicioFuncio()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 39
                self.expr(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 40
                self.comparacio(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_condicional

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfThenElseContext(CondicionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.CondicionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(FunxParser.IF, 0)
        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)

        def ELSE(self):
            return self.getToken(FunxParser.ELSE, 0)
        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstrContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfThenElse" ):
                return visitor.visitIfThenElse(self)
            else:
                return visitor.visitChildren(self)


    class IfThenContext(CondicionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.CondicionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(FunxParser.IF, 0)
        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstrContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfThen" ):
                return visitor.visitIfThen(self)
            else:
                return visitor.visitChildren(self)



    def condicional(self):

        localctx = FunxParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = FunxParser.IfThenContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.match(FunxParser.IF)
                self.state = 44
                self.comparacio(0)
                self.state = 45
                self.match(FunxParser.T__0)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147272) != 0:
                    self.state = 46
                    self.instr()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 52
                self.match(FunxParser.T__1)
                pass

            elif la_ == 2:
                localctx = FunxParser.IfThenElseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(FunxParser.IF)
                self.state = 55
                self.comparacio(0)
                self.state = 56
                self.match(FunxParser.T__0)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147272) != 0:
                    self.state = 57
                    self.instr()
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 63
                self.match(FunxParser.T__1)
                self.state = 64
                self.match(FunxParser.ELSE)
                self.state = 65
                self.match(FunxParser.T__0)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147272) != 0:
                    self.state = 66
                    self.instr()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.match(FunxParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_comparacio

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DifContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def DIF(self):
            return self.getToken(FunxParser.DIF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDif" ):
                return visitor.visitDif(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(FunxParser.NOT, 0)
        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class BracketsCompContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBracketsComp" ):
                return visitor.visitBracketsComp(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comparacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ComparacioContext)
            else:
                return self.getTypedRuleContext(FunxParser.ComparacioContext,i)

        def OR(self):
            return self.getToken(FunxParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comparacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ComparacioContext)
            else:
                return self.getTypedRuleContext(FunxParser.ComparacioContext,i)

        def AND(self):
            return self.getToken(FunxParser.AND, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class MajContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MAJ(self):
            return self.getToken(FunxParser.MAJ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaj" ):
                return visitor.visitMaj(self)
            else:
                return visitor.visitChildren(self)


    class MenContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MEN(self):
            return self.getToken(FunxParser.MEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMen" ):
                return visitor.visitMen(self)
            else:
                return visitor.visitChildren(self)


    class MajeqContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MAJEQ(self):
            return self.getToken(FunxParser.MAJEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMajeq" ):
                return visitor.visitMajeq(self)
            else:
                return visitor.visitChildren(self)


    class XorContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def comparacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ComparacioContext)
            else:
                return self.getTypedRuleContext(FunxParser.ComparacioContext,i)

        def XOR(self):
            return self.getToken(FunxParser.XOR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXor" ):
                return visitor.visitXor(self)
            else:
                return visitor.visitChildren(self)


    class EqContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def EQ(self):
            return self.getToken(FunxParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEq" ):
                return visitor.visitEq(self)
            else:
                return visitor.visitChildren(self)


    class MeneqContext(ComparacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ComparacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MENEQ(self):
            return self.getToken(FunxParser.MENEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeneq" ):
                return visitor.visitMeneq(self)
            else:
                return visitor.visitChildren(self)



    def comparacio(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FunxParser.ComparacioContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_comparacio, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = FunxParser.BracketsCompContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 77
                self.match(FunxParser.T__2)
                self.state = 78
                self.comparacio(0)
                self.state = 79
                self.match(FunxParser.T__3)
                pass

            elif la_ == 2:
                localctx = FunxParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 81
                self.match(FunxParser.NOT)
                self.state = 82
                self.comparacio(7)
                pass

            elif la_ == 3:
                localctx = FunxParser.DifContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(FunxParser.DIF)
                self.state = 85
                self.expr(0)
                pass

            elif la_ == 4:
                localctx = FunxParser.EqContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 87
                self.expr(0)
                self.state = 88
                self.match(FunxParser.EQ)
                self.state = 89
                self.expr(0)
                pass

            elif la_ == 5:
                localctx = FunxParser.MajeqContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(FunxParser.MAJEQ)
                self.state = 93
                self.expr(0)
                pass

            elif la_ == 6:
                localctx = FunxParser.MeneqContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(FunxParser.MENEQ)
                self.state = 97
                self.expr(0)
                pass

            elif la_ == 7:
                localctx = FunxParser.MajContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(FunxParser.MAJ)
                self.state = 101
                self.expr(0)
                pass

            elif la_ == 8:
                localctx = FunxParser.MenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.expr(0)
                self.state = 104
                self.match(FunxParser.MEN)
                self.state = 105
                self.expr(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 118
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = FunxParser.AndContext(self, FunxParser.ComparacioContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_comparacio)
                        self.state = 109
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 110
                        self.match(FunxParser.AND)
                        self.state = 111
                        self.comparacio(11)
                        pass

                    elif la_ == 2:
                        localctx = FunxParser.OrContext(self, FunxParser.ComparacioContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_comparacio)
                        self.state = 112
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 113
                        self.match(FunxParser.OR)
                        self.state = 114
                        self.comparacio(10)
                        pass

                    elif la_ == 3:
                        localctx = FunxParser.XorContext(self, FunxParser.ComparacioContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_comparacio)
                        self.state = 115
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 116
                        self.match(FunxParser.XOR)
                        self.state = 117
                        self.comparacio(9)
                        pass

             
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BucleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_bucle

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BucleWhileContext(BucleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.BucleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(FunxParser.WHILE, 0)
        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstrContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucleWhile" ):
                return visitor.visitBucleWhile(self)
            else:
                return visitor.visitChildren(self)


    class BucleForContext(BucleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.BucleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(FunxParser.FOR, 0)
        def assignacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.AssignacioContext)
            else:
                return self.getTypedRuleContext(FunxParser.AssignacioContext,i)

        def comparacio(self):
            return self.getTypedRuleContext(FunxParser.ComparacioContext,0)

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.InstrContext)
            else:
                return self.getTypedRuleContext(FunxParser.InstrContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucleFor" ):
                return visitor.visitBucleFor(self)
            else:
                return visitor.visitChildren(self)



    def bucle(self):

        localctx = FunxParser.BucleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bucle)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = FunxParser.BucleWhileContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(FunxParser.WHILE)
                self.state = 124
                self.comparacio(0)
                self.state = 125
                self.match(FunxParser.T__0)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147272) != 0:
                    self.state = 126
                    self.instr()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 132
                self.match(FunxParser.T__1)
                pass
            elif token in [9]:
                localctx = FunxParser.BucleForContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(FunxParser.FOR)
                self.state = 135
                self.assignacio()
                self.state = 136
                self.match(FunxParser.T__4)
                self.state = 137
                self.comparacio(0)
                self.state = 138
                self.match(FunxParser.T__4)
                self.state = 139
                self.assignacio()
                self.state = 140
                self.match(FunxParser.T__0)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147272) != 0:
                    self.state = 141
                    self.instr()
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 147
                self.match(FunxParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_assignacio

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssigContext(AssignacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.AssignacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TXT(self):
            return self.getToken(FunxParser.TXT, 0)
        def ASSIG(self):
            return self.getToken(FunxParser.ASSIG, 0)
        def expr(self):
            return self.getTypedRuleContext(FunxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig" ):
                return visitor.visitAssig(self)
            else:
                return visitor.visitChildren(self)



    def assignacio(self):

        localctx = FunxParser.AssignacioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignacio)
        try:
            localctx = FunxParser.AssigContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(FunxParser.TXT)
            self.state = 152
            self.match(FunxParser.ASSIG)
            self.state = 153
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FunxParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SumaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FunxParser.ExprContext)
            else:
                return self.getTypedRuleContext(FunxParser.ExprContext,i)

        def MES(self):
            return self.getToken(FunxParser.MES, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FunxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)
